plugins {
	id 'java'
	id 'org.springframework.boot' version '3.4.1'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
	maven { url 'https://jitpack.io' }
}

jar{
	enabled=false
}


dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	compileOnly 'org.projectlombok:lombok'
	runtimeOnly 'com.mysql:mysql-connector-j'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

	// validation 관련 기능
	implementation 'org.springframework.boot:spring-boot-starter-validation'

	// security 관련
	implementation 'org.springframework.boot:spring-boot-starter-security'

  //
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.7.0'

	// 이메일 인증 기능
	implementation 'org.springframework.boot:spring-boot-starter-mail'
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'

	// JWT
	implementation 'io.jsonwebtoken:jjwt-api:0.12.3'
	implementation 'io.jsonwebtoken:jjwt-impl:0.12.3'
	implementation 'io.jsonwebtoken:jjwt-jackson:0.12.3'

	// queryDSL
	implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
	annotationProcessor "com.querydsl:querydsl-apt:${dependencyManagement.importedProperties['querydsl.version']}:jakarta"
	annotationProcessor "jakarta.annotation:jakarta.annotation-api"
	annotationProcessor "jakarta.persistence:jakarta.persistence-api"
  
 	// OAuth2
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'

	implementation 'com.google.code.gson:gson'

	// 구글 places api 관련
	//	implementation 'com.google.maps:google-maps-services:0.42.2'
	// Jackson: JSON 응답을 파싱
	implementation 'com.fasterxml.jackson.core:jackson-databind'

	// AWS S3
	implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'

	// iamport 결제 관련
	implementation group: 'com.github.iamport', name: 'iamport-rest-client-java', version: '0.2.22'
	implementation group: 'com.squareup.retrofit2', name: 'adapter-rxjava2', version: '2.9.0'
	implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.5'
	implementation group: 'com.squareup.okhttp3', name: 'okhttp', version: '4.9.3'
	implementation group: 'com.squareup.retrofit2', name: 'converter-gson', version: '2.3.0'
}

tasks.named('test') {
	useJUnitPlatform()
}

// Querydsl 설정부
clean {
	delete file('src/main/generated')
}
